# CodeLight

./: README.md  package-lock.json  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: Editor.tsx  Form.tsx  SnippetItem.tsx  SnippetList.tsx  TaskBar.tsx
src/configs/: editorConfig.tsx
src/store/: configStore.ts  snippetStore.ts
