[package]
name = "snippet-app-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-unminimize", "window-hide", "window-start-dragging", "window-close", "window-show", "window-unmaximize", "window-maximize", "window-minimize", "dialog-open", "shell-all", "fs-write-file", "fs-read-file", "fs-remove-file", "fs-read-dir", "path-all", "dialog-save", "dialog-message", "dialog-confirm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
